[package]
name = "imap-next"
description = "Thin sans I/O abstraction over IMAP's distinct protocol flows"
keywords = ["email", "imap", "protocol", "network"]
categories = ["email", "network-programming"]
version = "0.2.0"
repository = "https://github.com/duesee/imap-next"
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = [".github"]

[features]
default = ["stream"]
expose_stream = []
stream = ["dep:bytes", "dep:tokio", "dep:tokio-rustls"]

# <Forward to imap-codec>
arbitrary = ["imap-codec/arbitrary"]
arbitrary_simplified = ["imap-codec/arbitrary_simplified"]
serde = ["imap-codec/serde"]
tag_generator = ["imap-codec/tag_generator"]

# IMAP
starttls = ["imap-codec/starttls"]
ext_condstore_qresync = ["imap-codec/ext_condstore_qresync"]
ext_id = ["imap-codec/ext_id"]
ext_login_referrals = ["imap-codec/ext_login_referrals"]
ext_mailbox_referrals = ["imap-codec/ext_mailbox_referrals"]
ext_metadata = ["imap-codec/ext_metadata"]
# </Forward to imap-codec>

[dependencies]
bytes = { version = "1.7.1", optional = true }
imap-codec = { version = "2.0.0-alpha.5", features = ["quirk_crlf_relaxed"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", optional = true, features = ["io-util", "macros", "net"] }
tokio-rustls = { version = "0.26.0", optional = true, default-features = false }
tracing = "0.1.40"

[dev-dependencies]
# We want to enable `tag_generator` for examples.
imap-next = { path = ".", features = ["tag_generator"] }

rand = "0.8.5"
tokio = { version = "1.40.0", features = ["full"] }

[workspace]
resolver = "2"
members = [
    "integration-test",
]
