[package]
name = "imap-next"
description = "Thin sans I/O abstraction over IMAP's distinct protocol flows"
keywords = ["email", "imap", "protocol", "network"]
categories = ["email", "network-programming"]
version = "0.3.3"
repository = "https://github.com/duesee/imap-next"
rust-version = "1.85"
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = [".github"]

[features]
default = ["stream"]
expose_stream = []
stream = ["dep:bytes", "dep:tokio", "dep:tokio-rustls"]

# <Forward to imap-codec>
arbitrary = ["imap-codec/arbitrary"]
arbitrary_simplified = ["imap-codec/arbitrary_simplified"]
serde = ["imap-codec/serde"]
tag_generator = ["imap-codec/tag_generator"]

# IMAP
starttls = ["imap-codec/starttls"]
ext_condstore_qresync = ["imap-codec/ext_condstore_qresync"]
ext_id = ["imap-codec/ext_id"]
ext_login_referrals = ["imap-codec/ext_login_referrals"]
ext_mailbox_referrals = ["imap-codec/ext_mailbox_referrals"]
ext_metadata = ["imap-codec/ext_metadata"]
# </Forward to imap-codec>

[dependencies]
bytes = { version = "1.11.0", optional = true }
imap-codec = { version = "2.0.0-alpha.6", features = ["quirk_crlf_relaxed"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", optional = true, features = ["io-util", "macros", "net"] }
tokio-rustls = { version = "0.26.4", optional = true, default-features = false }
tracing = "0.1.41"

[dev-dependencies]
# We want to enable `tag_generator` for examples.
imap-next = { path = ".", features = ["tag_generator"] }

rand = "0.9.2"
tokio = { version = "1.48.0", features = ["full"] }

[workspace]
resolver = "2"
members = [
    "integration-test",
]
