[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
client = { path = "../client" }
colored = "2.0.4"
crossterm = "0.27.0"
imap-codec = { version = "1.0.0", features = ["bounded-static", "quirk_crlf_relaxed"] }
imap-flow = { path = ".." }
log = "0.4.20"
ratatui = "0.23.0"
rpassword = "7.2.0"
serde = { version = "1.0.171", features = ["derive"] }
thiserror = "1.0.49"
tokio-rustls = "0.24.1"
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
webpki-roots = "0.24.0"

