[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
colored = "2.0.4"
imap-codec = { version = "1.0.0", features = ["bounded-static", "quirk_crlf_relaxed", "quirk_missing_text", "quirk_rectify_numbers"] }
imap-flow = { path = ".." }
log = "0.4.20"
rpassword = "7.2.0"
serde = { version = "1.0.171", features = ["derive"] }
thiserror = "1.0.49"
tokio-rustls = "0.24.1"
tokio = { version = "1.28", features = ["full"] }
toml = "0.8.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
utf7-imap = "0.3.2"
webpki-roots = "0.24.0"
