[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
imap-types = { version = "2.0.0" }
imap-flow = { path = ".." }
tasks = { path = "../tasks" }
thiserror = "1.0.49"
tokio-rustls = "0.24.1"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1.37"
utf7-imap = "0.3.2"
webpki-roots = "0.24.0"

[dev-dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
rpassword = "7.3.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
