[package]
name = "imap-client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
imap-flow = { path = ".." }
once_cell = "1"
rustls-native-certs = "0.7.0"
tasks = { path = "../tasks" }
thiserror = "1.0.50"
tokio = { version = "1.37.0", features = ["net", "time"] }
tokio-rustls = "0.26.0"
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
