[package]
name = "flow-test"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bstr = { version = "1.9.0", default-features = false }
bytes = "1.5.0"
imap-codec = "2.0.0"
imap-flow = { path = ".." }
imap-types = "2.0.0"
tokio = { version = "1.32.0", features = ["macros", "net", "rt", "time"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
