[package]
name = "integration-test"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bstr = { version = "1.11.0", default-features = false }
bytes = "1.8.0"
imap-codec = { version = "2.0.0-alpha.4" }
imap-next = { path = ".." }
tokio = { version = "1.41.1", features = ["macros", "net", "rt", "time"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Fix minimal versions
lazy_static = "1.5.0"
