[package]
name = "integration-test"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bstr = { version = "1.12.1", default-features = false }
bytes = "1.10.1"
imap-codec = { version = "2.0.0-alpha.6" }
imap-next = { path = ".." }
tokio = { version = "1.48.0", features = ["macros", "net", "rt", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Fix minimal versions
lazy_static = "1.5.0"
