[package]
name = "proxy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
colored = "2.0.4"
imap-codec = { version = "2.0.0", features = ["bounded-static", "quirk_crlf_relaxed", "ext_id"] }
imap-next = { path = ".." }
imap-types = { version = "2.0.0", features = ["bounded-static", "ext_id"] }
once_cell = "1.19.0"
rustls-native-certs = "0.7.0"
rustls-pemfile = "2.0.0-alpha.1"
serde = { version = "1.0.171", features = ["derive"] }
thiserror = "1.0.49"
tokio = { version = "1.28", features = ["full"] }
tokio-rustls = "0.26.0"
toml = "0.8.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
