[package]
name = "proxy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.86"
argh = "0.1.12"
colored = "2.1.0"
imap-codec = { version = "2.0.0-alpha.1", features = ["quirk_crlf_relaxed", "ext_id"], git = "https://github.com/duesee/imap-codec", rev = "6bd83aff18fc12bad2b45c9fc50506b0c26ae2f6" }
imap-next = { path = ".." }
imap-types = { version = "2.0.0-alpha.1", features = ["ext_id"], git = "https://github.com/duesee/imap-codec", rev = "6bd83aff18fc12bad2b45c9fc50506b0c26ae2f6"  }
once_cell = "1.19.0"
rustls-native-certs = "0.7.1"
rustls-pemfile = "2.1.2"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38", features = ["full"] }
tokio-rustls = "0.26.0"
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
