[package]
name = "proxy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.86"
argh = "0.1.12"
byte_string = "1.0.0"
colored = "2.1.0"
imap-codec = { version = "2.0.0-alpha.2", features = ["quirk_crlf_relaxed", "ext_id"] }
imap-next = { path = ".." }
once_cell = "1.19.0"
rustls-native-certs = "0.7.1"
rustls-pemfile = "2.1.2"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.62"
tokio = { version = "1.38", features = ["full"] }
tokio-rustls = "0.26.0"
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
