[package]
name = "tasks"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }

[dependencies]
imap-flow = { path = ".." }
imap-types = "2.0.0"
tag-generator = { path = "../tag-generator" }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["net"] }
